--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "insta-reel": "^2.0.1",
+    "instagram-save": "^1.3.2",
     "instagram-url-direct": "^1.0.9",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "videolinkapi": "^1.0.0"
   }
 }
